# vcpkg-registry

./: .gitignore  lkebartifactory.nl.crt  vcpkg-configuration.json.in
.github/workflows/: test_build.yaml
ports/biovault-bfloat16/: biovault-bfloat16-config.cmake.in  portfile.cmake  vcpkg.json
ports/biovault_bfloat16/: portfile.cmake
ports/hdilib/: fix-flann-target.patch  portfile.cmake  vcpkg.json
ports/kompute/: portfile.cmake  vcpkg.json
ports/qt/: installutils.py  portfile.cmake  qt-installer.py  vcpkg.json
ports/vtk/: portfile.cmake  vcpkg.json
test/registry-tester/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
test/registry-tester/biovault_bfloat16_test/: CMakeLists.txt
test/registry-tester/biovault_bfloat16_test/src/: main.cpp
test/registry-tester/hdilib_test/: CMakeLists.txt
test/registry-tester/hdilib_test/src/: main.cpp
test/registry-tester/qt_test/: CMakeLists.txt
test/registry-tester/vtk_test/: CMakeLists.txt
versions/: baseline.json
versions/b-/: biovault-bfloat16.json
versions/h-/: hdilib.json
versions/k-/: kompute.json
versions/q-/: qt.json
versions/v-/: vtk.json
